--- a/gettext-runtime/doc/matrix.texi
+++ b/gettext-runtime/doc/matrix.texi
@@ -8,7 +8,7 @@ aspell             |             []  []             []         [] [] |
 bash               |                    []          []         []    |
 beebase            |                                                 |
 bfd                |                                                 |
-binutils           |                                []               |
+binutils           |          []                    []               |
 bison              |                    []          []               |
 bison-runtime      |             []     []          []            [] |
 buzztrax           |                                           [] [] |
@@ -17,7 +17,7 @@ ccide              |                                              [] |
 cflow              |                                                 |
 chambercourt       |                                                 |
 clisp              |                                              [] |
-coreutils          |                    []          []         [] [] |
+coreutils          |          []        []          []         [] [] |
 cpio               |                    []                        [] |
 cppi               |                                              [] |
 cpplib             |                                                 |
@@ -25,7 +25,7 @@ cryptsetup         |                                           [] [] |
 datamash           |                                              [] |
 denemo             |                                []         [] [] |
 dfarc              |                                []            [] |
-dialog             |       []    []                 []         [] [] |
+dialog             |                    []                           |
 dico               |                                              [] |
 diffutils          |                    []                     [] [] |
 dink               |                                []            [] |
@@ -37,7 +37,7 @@ e2fsprogs          |                                []         [] [] |
 enscript           |                                []            [] |
 exif               |             []                            [] [] |
 fetchmail          |                                []         [] [] |
-findutils          |                 [] []                     [] [] |
+findutils          |          []     [] []                     [] [] |
 flex               |                    []          []            [] |
 freedink           |                                []         [] [] |
 gas                |                                                 |
@@ -47,7 +47,7 @@ gcc                |                                                 |
 gdbm               |                                                 |
 gettext-examples   |             []     []          []         [] [] |
 gettext-runtime    |                    []                     []    |
-gettext-tools      |                    []          []            [] |
+gettext-tools      |                    []          []               |
 gnubik             |          []                                  [] |
 gnuchess           |                                              [] |
 gnucobol           |                                                 |
@@ -55,18 +55,18 @@ gnulib             |                    []                           |
 gnunet             |                                                 |
 gnunet-gtk         |                                                 |
 gnutls             |                                           []    |
-gphoto2            |                                           [] [] |
+gphoto2            |          []                               [] [] |
 gprof              |                    []                        [] |
 grep               |                 [] []          []         [] [] |
 grip               |                 [] []          []            [] |
 grub               |             []                 []            [] |
 gsasl              |                                              [] |
 gss                |                                              [] |
-gst-plugins-bad    |             []     []                     [] [] |
-gst-plugins-base   |                    []          []         [] [] |
-gst-plugins-good   |                    []          []         [] [] |
-gst-plugins-ugly   |             []     []          []         [] [] |
-gstreamer          |             []     []          []         [] [] |
+gst-plugins-bad    |          [] []     []                     [] [] |
+gst-plugins-base   |          []        []          []         [] [] |
+gst-plugins-good   |          []        []          []         [] [] |
+gst-plugins-ugly   |          [] []     []          []         [] [] |
+gstreamer          |          [] []     []          []         [] [] |
 gtick              |                                           [] [] |
 gtkam              |                 []                        [] [] |
 gtkspell           |    []    [] []  []             []         [] [] |
@@ -79,11 +79,11 @@ idutils            |                                              [] |
 kbd                |                                           []    |
 klavaro            |          []        [] []       []         [] [] |
 ld                 |                                                 |
-libc               |                 [] []          []         [] [] |
-libexif            |                                              [] |
-libextractor       |                                              [] |
-libgphoto2         |                                           [] [] |
-libgphoto2_port    |                                           [] [] |
+libc               |          []     [] []          []         [] [] |
+libexif            |          []                                  [] |
+libextractor       |          []                                  [] |
+libgphoto2         |          []                               [] [] |
+libgphoto2_port    |          []                               [] [] |
 libiconv           |                 [] []                     [] [] |
 libidn             |                                           [] [] |
 libidn2            |                                           [] [] |
@@ -128,7 +128,7 @@ sysstat            |                 []                              |
 tar                |                    []          []         [] [] |
 texinfo            |                                []         [] [] |
 texinfo_document   |                                []         []    |
-tigervnc           |                    []                     []    |
+tigervnc           |          []        []                     []    |
 tin                |                                              [] |
 tin-man            |                                                 |
 trader             |                                              [] |
@@ -140,18 +140,18 @@ wastesedge         |                                              [] |
 wcd                |                                              [] |
 wcd-man            |                                                 |
 wdiff              |                                []         [] [] |
-wget               |                 []                        [] [] |
-wget2              |                                                 |
+wget               |          []     []                        [] [] |
+wget2              |          []                                     |
 wincoll            |                                                 |
 wyslij-po          |                                              [] |
 xboard             |                                              [] |
 xdg-user-dirs      | [] [] [] [] []  [] []     []   [] []  []  [] [] |
 xkeyboard-config   |          []        []          []         [] [] |
-xz                 |                                []               |
-xz-man             |                                                 |
+xz                 |          []                    []               |
+xz-man             |          []                                     |
                    +-------------------------------------------------+
                      ab af an ar ast be bg bn bn_IN ca ckb crh cs da
-                      1  2  2  7 14  14 31  1   1   50  1   1  62 93
+                      1  2  1 26 13  14 32  1   1   49  1   1  61 91
 @end group
 
 @group
@@ -172,7 +172,7 @@ ccide              | []              [] []           [] []  []        |
 cflow              | []              [] []              []            |
 chambercourt       |     []                             []            |
 clisp              | []     []          []              []            |
-coreutils          | []                 []  []          []            |
+coreutils          | []                     []          []            |
 cpio               | []                 []           [] []      []    |
 cppi               | []              [] []           [] []            |
 cpplib             | []                 []              []            |
@@ -180,7 +180,7 @@ cryptsetup         | []                 []              []            |
 datamash           | []              [] []              []            |
 denemo             |                                                  |
 dfarc              | []              [] []           [] []  []        |
-dialog             | []  []          [] []     [] [] [] []  []  [] [] |
+dialog             | []              []           []                  |
 dico               | []                 []           [] []            |
 diffutils          | []  []          [] []           [] []            |
 dink               | []              [] []           [] []            |
@@ -261,7 +261,7 @@ opcodes            | []                 []              []            |
 parted             | []                 []              []  []        |
 pies               | []                 []              []            |
 procps-ng          | []                 []              []            |
-procps-ng-man      |                                                  |
+procps-ng-man      | []                                               |
 psmisc             | []  []          [] []           [] []            |
 psmisc-man         | []                                 []            |
 pspp               | []  []             []              []            |
@@ -269,7 +269,7 @@ pyspread           | []                                 []            |
 radius             |                    []              []            |
 recode             | []              [] []           [] []      []    |
 recutils           | []                              [] []            |
-rush               | []                 []           [] []            |
+rush               | []                 []              []            |
 sarg               | []                 []              []            |
 savane             | []                 []              []            |
 sed                | []  []          [] []  []       [] []      []    |
@@ -285,7 +285,7 @@ texinfo            | []              [] []              []            |
 texinfo_document   |                    []              []            |
 tigervnc           | []                 []           [] []  []        |
 tin                | []                     []          []            |
-tin-man            | []         []                                    |
+tin-man            | []                                               |
 trader             | []         []   []              [] []            |
 util-linux         | []                 []              []            |
 util-linux-man     | []                                 []            |
@@ -306,7 +306,7 @@ xz                 | []              [] []           []               |
 xz-man             | []                                 []            |
                    +--------------------------------------------------+
                      de  el en en_GB eo es  et eu fa fi fr  fur ga gd
-                     128 22  1   5   78 119 17  8  5 71 138 25  24  2
+                     129 21  1   4   78 117 17  7  5 69 137 24  23  1
 @end group
 
 @group
@@ -328,14 +328,14 @@ cflow              |                                                  |
 chambercourt       |                                                  |
 clisp              |                                                  |
 coreutils          |             [] []             []              [] |
-cpio               |             [] []    []    [] []              [] |
+cpio               |             [] []    []    [] [] []           [] |
 cppi               | []          [] []          [] [] []              |
 cpplib             |                                                  |
 cryptsetup         |                               []                 |
 datamash           |                                                  |
 denemo             |                                                  |
 dfarc              |             [] []          []                    |
-dialog             | []          [] []    [] [] [] [] [] []           |
+dialog             |                      []       [] []              |
 dico               |                                                  |
 diffutils          |             [] []    []    [] [] []           [] |
 dink               |                []                                |
@@ -357,7 +357,7 @@ gcc                |                                                  |
 gdbm               |                                  []              |
 gettext-examples   | []          [] []          [] [] []              |
 gettext-runtime    |             []             [] []              [] |
-gettext-tools      |             []       []    [] []              [] |
+gettext-tools      |             []             [] []              [] |
 gnubik             | []    []    []             []                    |
 gnuchess           | []                                               |
 gnucobol           |                                                  |
@@ -367,7 +367,7 @@ gnunet-gtk         |                                                  |
 gnutls             |                            []    []              |
 gphoto2            |                []    []    [] [] []           [] |
 gprof              |                []    []    []    []              |
-grep               | []          [] []    []    [] [] []           [] |
+grep               | []          [] []    []    [] [] [] []        [] |
 grip               |                []          [] []              [] |
 grub               | []    []    [] []    []    []    []           [] |
 gsasl              |                []    []    []    []              |
@@ -451,7 +451,7 @@ wcd                |                                                  |
 wcd-man            |                                                  |
 wdiff              | []             []          []                    |
 wget               |             [] []    []    [] []              [] |
-wget2              |             []       []       []              [] |
+wget2              |             []       []    [] []              [] |
 wincoll            |                                                  |
 wyslij-po          | []          [] []    []                          |
 xboard             |                                                  |
@@ -461,7 +461,7 @@ xz                 |             [] []          []    []           [] |
 xz-man             |                            []                 [] |
                    +--------------------------------------------------+
                      gl gu he hi hr hu hy id is it ja ka kab kk kn ko
-                     28  1 10  1 58 61  2 58  7 65 45 44  2   2  1 45
+                     27  1 10  1 57 60  2 57  6 65 45 45  2   2  1 45
 @end group
 
 @group
@@ -490,7 +490,7 @@ cryptsetup         |                                                 |
 datamash           |                                  []    []       |
 denemo             |                                        []       |
 dfarc              |                []                      []       |
-dialog             | []       [] []             []    []    []       |
+dialog             |                                                 |
 dico               |                                                 |
 diffutils          |             []             []    []    []       |
 dink               |                                        []       |
@@ -579,7 +579,7 @@ pyspread           |                                           []    |
 radius             |                                        []       |
 recode             |                                  []    []       |
 recutils           |                                        []       |
-rush               |                                        []       |
+rush               |                                                 |
 sarg               |                                                 |
 savane             |                                                 |
 sed                |                                  []    []       |
@@ -591,7 +591,7 @@ sudo               |                                  []    []       |
 sudoers            |                                  []             |
 sysstat            |             []                   []    []       |
 tar                |    []                            []    []       |
-texinfo            |                                  []    []       |
+texinfo            |                                        []       |
 texinfo_document   |                                                 |
 tigervnc           |                                                 |
 tin                |                                                 |
@@ -616,7 +616,7 @@ xz                 |                                        []       |
 xz-man             |                                                 |
                    +-------------------------------------------------+
                      ku ky lg lt lv mk ml mn mr ms mt nb ne nl nn or
-                      3  5  1 10 17  2  1  3  1 15  1 42  1 92  4  1
+                      2  5  1  9 16  2  1  3  1 14  1 40  1 90  4  1
 @end group
 
 @group
@@ -645,7 +645,7 @@ cryptsetup         |    []          []  []        []       []  []     |
 datamash           |           []   []                     []  []     |
 denemo             |                                                  |
 dfarc              |    []     []   []                     []  []     |
-dialog             |    [] []  []   []  []        [] [] [] []  []  [] |
+dialog             |    [] []       []  []              [] []  []     |
 dico               |    []     []   []                     []  []     |
 diffutils          |    [] []  []   []  []                 []  []     |
 dink               |                                           []     |
@@ -666,7 +666,7 @@ gcal               |                []                     []  []     |
 gcc                |                    []                     []     |
 gdbm               |    []     []   []  []                 []  []     |
 gettext-examples   |    [] []  []   []  []        [] [] [] []  []     |
-gettext-runtime    |       []  []   []                         []     |
+gettext-runtime    |    [] []  []   []  []        []       []  []     |
 gettext-tools      |    [] []  []   []  []        [] []    []  []     |
 gnubik             |    [] []  []   []               []    []  []     |
 gnuchess           |           []   []                     []  []     |
@@ -678,8 +678,8 @@ gnutls             |    []     []   []                     []  []     |
 gphoto2            |    []     []   []  []                 []  []     |
 gprof              |           []   []  []                 []  []     |
 grep               |    [] []  []   []  []        [] []    []  []     |
-grip               |    []     []   []  []                 []         |
-grub               |    [] []  []   []  []           []    []  []     |
+grip               |    []     []   []  []                 []  []     |
+grub               |    [] []       []  []           []    []  []     |
 gsasl              |    []     []   []            []       []  []     |
 gss                |    []     []   []            []       []  []     |
 gst-plugins-bad    |    []     []   []  []        [] []    []  []     |
@@ -698,10 +698,10 @@ i18nparse          |           []   []               []    []  []     |
 idutils            |    []     []   []  []                 []  []     |
 kbd                |    [] []  []   []  []                 []  []     |
 klavaro            | [] [] []  []   []  []        [] []    []  []     |
-ld                 |           []   []  []                 []         |
+ld                 |           []   []  []                 []  []     |
 libc               |    [] []  []   []  []        []       []  []     |
 libexif            |    []          []            []       []  []     |
-libextractor       |    []     []   []                     []         |
+libextractor       |    []     []   []                     []  []     |
 libgphoto2         |    []          []                         []     |
 libgphoto2_port    |    []     []   []  []        []       []  []     |
 libiconv           |    []     []   []  []        [] []    []  []     |
@@ -712,7 +712,7 @@ lordsawar          |                    []                     []     |
 lynx               |           []   []  []                     []     |
 m4                 |    []     []   []                     []  []     |
 mailfromd          |    []     []   []                     []         |
-mailutils          |    []     []   []                     []         |
+mailutils          |    []     []   []                     []  []     |
 make               |    [] []  []   []  []                 []  []     |
 man-db             |    [] []  []   []  []                 []  []     |
 man-db-manpages    |    [] []  []   []  []                 []  []     |
@@ -731,11 +731,11 @@ psmisc             |    [] []  []   []  []                 []  []     |
 psmisc-man         |           []   []  []                 []  []     |
 pspp               |                    []                     []     |
 pyspread           |           []                          []  []     |
-radius             |    []              []                 []         |
+radius             |    []          []  []                 []  []     |
 recode             |    [] []  []   []  []        [] []    []  []     |
 recutils           |           []   []                     []  []     |
 rush               |    []     []   []                     []  []     |
-sarg               |           []   []  []                 []         |
+sarg               |           []   []  []                 []  []     |
 savane             |           []   []  ()                            |
 sed                |    [] []  []   []  []        [] []    []  []     |
 sharutils          |    []     []   []                     []  []     |
@@ -749,11 +749,11 @@ tar                |    [] []  []   []  []           []    []  []     |
 texinfo            |    [] []  []   []  []        []       []  []     |
 texinfo_document   |    [] []  []   []            []       []  []     |
 tigervnc           |                []  []        []       []  []     |
-tin                |                    []                            |
-tin-man            |                                                  |
+tin                |                []                                |
+tin-man            |                []                         []     |
 trader             |           []   []  []                 []  []     |
 util-linux         |    [] []  []   []                     []  []     |
-util-linux-man     |    []          []                     []         |
+util-linux-man     |    []          []                     []  []     |
 vmm                |                []                     []         |
 vorbis-tools       |    []     []   []               []    []  []     |
 wastesedge         |           []                              []     |
@@ -768,10 +768,10 @@ xboard             |    []          []  []                 []  []     |
 xdg-user-dirs      | [] [] []  []   []  []        [] [] [] []  []     |
 xkeyboard-config   |    [] []  []   []  []           [] [] []  []     |
 xz                 |    [] []  []   []                     []  []     |
-xz-man             |           []   []                     []         |
+xz-man             |           []   []                     []  []     |
                    +--------------------------------------------------+
                      pa pl pt pt_BR ro  ru rw scn sk sl sq sr  sv  sw
-                      3 96 49  111  132 83  0  1  36 31 11 130 129  1
+                      3 97 49  109  135 83  0  1  36 30 11 131 138  0
 @end group
 
 @group
@@ -783,7 +783,7 @@ aspell             |                []     [] []     []               | 34
 bash               |                []     []        []          []   | 23
 beebase            |                []                                |  8
 bfd                |                []                                |  8
-binutils           |                []                                |  8
+binutils           |                []                                |  9
 bison              |                []                           []   | 18
 bison-runtime      | []       [] [] []     []        []          []   | 41
 buzztrax           |                       []        []               | 12
@@ -793,14 +793,14 @@ cflow              |                []               []               | 11
 chambercourt       |                []                                |  7
 clisp              |                                                  | 13
 coreutils          |             [] []     []        []          []   | 27
-cpio               |             [] []     []        []               | 25
+cpio               |             [] []     []        []               | 26
 cppi               |                []     []        []               | 20
 cpplib             |                []               []               |  8
 cryptsetup         |                []               []               | 14
 datamash           |                []                                | 12
 denemo             |                                 []    []    []   |  7
 dfarc              |                       []                         | 19
-dialog             |          [] [] []     [] []     []          []   | 49
+dialog             |                []                                | 15
 dico               |                []                                | 11
 diffutils          |             [] []     []        []          []   | 32
 dink               |             []                                   | 11
@@ -812,7 +812,7 @@ e2fsprogs          |                []     []        []               | 16
 enscript           |             [] []     []                         | 22
 exif               |             [] []     []        []               | 33
 fetchmail          |                       []        []               | 19
-findutils          |             [] []     []        []          []   | 32
+findutils          |             [] []     []        []          []   | 33
 flex               |             [] []     []        []          []   | 22
 freedink           |          []           []                         | 27
 gas                |                []                                |  8
@@ -821,8 +821,8 @@ gcal               |             []                  []               | 10
 gcc                |                []                                |  5
 gdbm               |                []     []                         | 13
 gettext-examples   | []          [] []     []        []          []   | 39
-gettext-runtime    |                []               []               | 14
-gettext-tools      |                []     []        []          []   | 25
+gettext-runtime    |                []               []               | 18
+gettext-tools      |                []     []        []          []   | 23
 gnubik             |                []     []        []               | 24
 gnuchess           |                []     []        []               | 15
 gnucobol           |                                                  |  3
@@ -830,18 +830,18 @@ gnulib             |                []               []          []   | 19
 gnunet             |                                                  |  2
 gnunet-gtk         |                                                  |  3
 gnutls             |                []     []        []               | 18
-gphoto2            |                []     []        []          []   | 21
+gphoto2            |                []     []        []          []   | 22
 gprof              |             [] []     []                         | 22
-grep               | []       [] [] []     []        []          []   | 38
-grip               |                []     []        []    []    []   | 25
-grub               |             [] []     []        []               | 31
+grep               | []       [] [] []     []        []          []   | 39
+grip               |                []     []        []    []    []   | 26
+grub               |             [] []     []        []               | 30
 gsasl              |                []     []        []               | 21
 gss                |                       []        []               | 20
-gst-plugins-bad    |             [] []     []        []          []   | 30
-gst-plugins-base   |             [] []     []        []               | 32
-gst-plugins-good   |             [] []     []        []          []   | 34
-gst-plugins-ugly   | []          [] []     []        []          []   | 40
-gstreamer          |             [] []     []        []          []   | 35
+gst-plugins-bad    |             [] []     []        []          []   | 31
+gst-plugins-base   |             [] []     []        []               | 33
+gst-plugins-good   |             [] []     []        []          []   | 35
+gst-plugins-ugly   | []          [] []     []        []          []   | 41
+gstreamer          |             [] []     []        []          []   | 36
 gtick              |                []     []        []               | 23
 gtkam              |                []     []        []               | 27
 gtkspell           | []       [] [] []     [] []     []    []    []   | 52
@@ -853,12 +853,12 @@ i18nparse          |                []                                | 11
 idutils            |                []     []        []               | 21
 kbd                |                []                                | 15
 klavaro            |             [] []  [] []    []  []               | 36
-ld                 |                []                                |  7
-libc               |             [] []     []        []          []   | 29
-libexif            |                []     []                         | 13
-libextractor       |                []     []                         | 11
-libgphoto2         |                []     []                         |  9
-libgphoto2_port    |                []     []        []          []   | 22
+ld                 |                []                                |  8
+libc               |             [] []     []        []          []   | 30
+libexif            |                []     []        []               | 15
+libextractor       |                []     []                         | 13
+libgphoto2         |                []     []        []               | 11
+libgphoto2_port    |                []     []        []          []   | 23
 libiconv           |                []     [] []     []          []   | 34
 libidn             |                []     []        []               | 21
 libidn2            |                []               []               | 21
@@ -867,7 +867,7 @@ lordsawar          |             []                                   |  8
 lynx               |             [] []     []                         | 20
 m4                 |                []               []               | 15
 mailfromd          |                []     []                         |  9
-mailutils          |                []     []                         | 10
+mailutils          |                []     []                         | 11
 make               |                []     []        []          []   | 25
 man-db             |             [] []     []        []          []   | 25
 man-db-manpages    |             [] []               []               | 15
@@ -881,16 +881,16 @@ opcodes            |                []                                |  8
 parted             |             [] []     []        []          []   | 27
 pies               |                []     []                         |  9
 procps-ng          |                []     []        []               | 11
-procps-ng-man      |                []               []               |  4
+procps-ng-man      |                []               []               |  5
 psmisc             |                []     []        []          []   | 27
 psmisc-man         |                []                                | 10
 pspp               | []       []    []               []               | 16
 pyspread           |                []                                |  8
-radius             |                []     []                         | 10
+radius             |                []     []                         | 12
 recode             |             [] []     []        []               | 31
 recutils           |                []     []                         | 10
-rush               |                []     []        []               | 14
-sarg               |                                                  |  9
+rush               |                []               []               | 11
+sarg               |                                                  | 10
 savane             |                []                                |  7
 sed                |             [] []     []        []          []   | 38
 sharutils          |                []     []        []               | 14
@@ -901,31 +901,31 @@ sudo               |             [] []     []        []          []   | 33
 sudoers            |                []               []          []   | 22
 sysstat            |             [] []     []        []               | 24
 tar                |             [] []     []        []          []   | 33
-texinfo            |             [] []     []                         | 22
+texinfo            |             [] []     []                         | 21
 texinfo_document   |                []                                | 14
-tigervnc           |             [] []               []          []   | 20
+tigervnc           |             [] []               []          []   | 21
 tin                |             []                  []          []   |  8
-tin-man            |                                                  |  2
+tin-man            |                                                  |  3
 trader             |                                                  | 14
 util-linux         |             [] []               []               | 18
-util-linux-man     |                []                                |  6
+util-linux-man     |                []                                |  7
 vmm                |                []                                |  3
 vorbis-tools       |                       []                         | 17
 wastesedge         |             []                                   |  7
 wcd                |                []     []        []               | 15
 wcd-man            |                []                                |  8
 wdiff              |                []     []        []          []   | 27
-wget               |             [] []     []        []          []   | 31
-wget2              |                []               []               | 14
+wget               |             [] []     []        []          []   | 32
+wget2              |                []               []               | 16
 wincoll            |                []                                | 10
 wyslij-po          |                []     []        []               | 20
 xboard             |             [] []               []               | 13
 xdg-user-dirs      | [] []    [] [] []     [] []     []    []    []   | 73
 xkeyboard-config   |             [] []               []               | 33
-xz                 |             [] []     []        []          []   | 22
-xz-man             |                []                                |  8
+xz                 |             [] []     []        []          []   | 23
+xz-man             |                []                                | 10
                    +--------------------------------------------------+
   87 teams           ta te tg th tr uk  ur vi wa wo zh_CN zh_HK zh_TW
- 147 domains          8  1  0 11 48 124  1 85  5  1  91     4    41    2785
+ 147 domains          8  1  0 10 47 124  1 83  4  1  92     4    40    2782
 @end group
 @end example
